{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 679,
  "lineage": "4c5e20d1-280f-8085-c20c-4ad92a04329f",
  "resources": [
    {
      "module": "module.alb_client",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:loadbalancer/app/alb-developmet-cli/016fdf6809248942",
            "arn_suffix": "app/alb-developmet-cli/016fdf6809248942",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-developmet-cli-650698541.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:141084936975:loadbalancer/app/alb-developmet-cli/016fdf6809248942",
            "idle_timeout": 30,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-developmet-cli",
            "security_groups": [
              "sg-00c28754711329c50"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-076b52f280302d8db"
              },
              {
                "subnet_id": "subnet-0c0e86575bdc988e9"
              }
            ],
            "subnets": [
              "subnet-076b52f280302d8db",
              "subnet-0c0e86575bdc988e9"
            ],
            "vpc_id": "vpc-0f1d8a1af161a22fd",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_client.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_client",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:listener/app/alb-developmet-cli/016fdf6809248942/dcc2f961036941d1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-developmet-c-b/85d41ddcdb978ec6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:141084936975:listener/app/alb-developmet-cli/016fdf6809248942/dcc2f961036941d1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:loadbalancer/app/alb-developmet-cli/016fdf6809248942",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_client.aws_alb.alb",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_client.aws_security_group.sg",
            "module.target_group_client_blue.aws_alb_target_group.target_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_server",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:loadbalancer/app/alb-developmet-ser/8d2e60d25210bd97",
            "arn_suffix": "app/alb-developmet-ser/8d2e60d25210bd97",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-developmet-ser-1573665632.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:141084936975:loadbalancer/app/alb-developmet-ser/8d2e60d25210bd97",
            "idle_timeout": 30,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-developmet-ser",
            "security_groups": [
              "sg-0239f91abe05e3a6d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-076b52f280302d8db"
              },
              {
                "subnet_id": "subnet-0c0e86575bdc988e9"
              }
            ],
            "subnets": [
              "subnet-076b52f280302d8db",
              "subnet-0c0e86575bdc988e9"
            ],
            "vpc_id": "vpc-0f1d8a1af161a22fd",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_server.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_server",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:listener/app/alb-developmet-ser/8d2e60d25210bd97/f2c90956672fe38d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-developmet-s-b/cb3ed1fff89b5af9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:141084936975:listener/app/alb-developmet-ser/8d2e60d25210bd97/f2c90956672fe38d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:loadbalancer/app/alb-developmet-ser/8d2e60d25210bd97",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_server.aws_alb.alb",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_server.aws_security_group.sg",
            "module.target_group_server_blue.aws_alb_target_group.target_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:route-table/rtb-09750aac6807fe16e",
            "default_route_table_id": "rtb-09750aac6807fe16e",
            "id": "rtb-09750aac6807fe16e",
            "owner_id": "141084936975",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02885c0ae77fe967b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt_developmet"
            },
            "tags_all": {
              "Name": "public_rt_developmet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1d8a1af161a22fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0193f300e0faee171",
            "domain": "vpc",
            "id": "eipalloc-0193f300e0faee171",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-209-156-165.compute-1.amazonaws.com",
            "public_ip": "3.209.156.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-developmet"
            },
            "tags_all": {
              "Name": "eip-developmet"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:internet-gateway/igw-02885c0ae77fe967b",
            "id": "igw-02885c0ae77fe967b",
            "owner_id": "141084936975",
            "tags": {
              "Name": "igw_developmet"
            },
            "tags_all": {
              "Name": "igw_developmet"
            },
            "vpc_id": "vpc-0f1d8a1af161a22fd"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0193f300e0faee171",
            "connectivity_type": "public",
            "id": "nat-0d787bf76083256e2",
            "network_interface_id": "eni-0d60273f6d831a93e",
            "private_ip": "10.120.2.202",
            "public_ip": "3.209.156.165",
            "subnet_id": "subnet-076b52f280302d8db",
            "tags": {
              "Name": "nat_developmet"
            },
            "tags_all": {
              "Name": "nat_developmet"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:route-table/rtb-08672b7dcb66a141a",
            "id": "rtb-08672b7dcb66a141a",
            "owner_id": "141084936975",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d787bf76083256e2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt_developmet"
            },
            "tags_all": {
              "Name": "private_rt_developmet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1d8a1af161a22fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_priv_subnets_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0939132f96952028a",
            "route_table_id": "rtb-08672b7dcb66a141a",
            "subnet_id": "subnet-02161a186c6b28644"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_client",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069d7e5e9124be7f9",
            "route_table_id": "rtb-08672b7dcb66a141a",
            "subnet_id": "subnet-0074af11adf841c92"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_client",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_priv_subnets_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08024a6d1251ee8bb",
            "route_table_id": "rtb-08672b7dcb66a141a",
            "subnet_id": "subnet-0b7caf527630fe935"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_server",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069bd5f2dcb9a50bb",
            "route_table_id": "rtb-08672b7dcb66a141a",
            "subnet_id": "subnet-0c04f0a82cdec5c2a"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_server",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_pub_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073f78a7445600395",
            "route_table_id": "rtb-09750aac6807fe16e",
            "subnet_id": "subnet-076b52f280302d8db"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09862ac96afc58da9",
            "route_table_id": "rtb-09750aac6807fe16e",
            "subnet_id": "subnet-0c0e86575bdc988e9"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:subnet/subnet-02161a186c6b28644",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.120.6.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02161a186c6b28644",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141084936975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_client_0_developmet"
            },
            "tags_all": {
              "Name": "private_subnet_client_0_developmet"
            },
            "vpc_id": "vpc-0f1d8a1af161a22fd"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:subnet/subnet-0074af11adf841c92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.120.8.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0074af11adf841c92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141084936975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_client_1_developmet"
            },
            "tags_all": {
              "Name": "private_subnet_client_1_developmet"
            },
            "vpc_id": "vpc-0f1d8a1af161a22fd"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:subnet/subnet-0b7caf527630fe935",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.120.10.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7caf527630fe935",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141084936975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_server_0_developmet"
            },
            "tags_all": {
              "Name": "private_subnet_server_0_developmet"
            },
            "vpc_id": "vpc-0f1d8a1af161a22fd"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:subnet/subnet-0c04f0a82cdec5c2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.120.12.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c04f0a82cdec5c2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141084936975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_server_1_developmet"
            },
            "tags_all": {
              "Name": "private_subnet_server_1_developmet"
            },
            "vpc_id": "vpc-0f1d8a1af161a22fd"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:subnet/subnet-076b52f280302d8db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.120.2.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076b52f280302d8db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "141084936975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_0_developmet"
            },
            "tags_all": {
              "Name": "public_subnet_0_developmet"
            },
            "vpc_id": "vpc-0f1d8a1af161a22fd"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:subnet/subnet-0c0e86575bdc988e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.120.4.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0e86575bdc988e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "141084936975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1_developmet"
            },
            "tags_all": {
              "Name": "public_subnet_1_developmet"
            },
            "vpc_id": "vpc-0f1d8a1af161a22fd"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:vpc/vpc-0f1d8a1af161a22fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.120.0.0/16",
            "default_network_acl_id": "acl-0618f6be58ea09810",
            "default_route_table_id": "rtb-09750aac6807fe16e",
            "default_security_group_id": "sg-0e6b1b89a00160a52",
            "dhcp_options_id": "dopt-0e429ac585a62c85d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f1d8a1af161a22fd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09750aac6807fe16e",
            "owner_id": "141084936975",
            "tags": {
              "Name": "vpc_developmet"
            },
            "tags_all": {
              "Name": "vpc_developmet"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_alb_client",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:security-group/sg-00c28754711329c50",
            "description": "Controls access to the client ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c28754711329c50",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-developmet-client",
            "name_prefix": "",
            "owner_id": "141084936975",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-developmet-client"
            },
            "tags_all": {
              "Name": "alb-developmet-client"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1d8a1af161a22fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_alb_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:security-group/sg-0239f91abe05e3a6d",
            "description": "Controls access to the server ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0239f91abe05e3a6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-developmet-server",
            "name_prefix": "",
            "owner_id": "141084936975",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-developmet-server"
            },
            "tags_all": {
              "Name": "alb-developmet-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1d8a1af161a22fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_ecs_task_client",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:security-group/sg-0a2c41d30ae53524f",
            "description": "Controls access to the client ECS task",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2c41d30ae53524f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c28754711329c50"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-task-developmet-client",
            "name_prefix": "",
            "owner_id": "141084936975",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-task-developmet-client"
            },
            "tags_all": {
              "Name": "ecs-task-developmet-client"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1d8a1af161a22fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.security_group_alb_client.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_ecs_task_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:141084936975:security-group/sg-0976e555fb0653526",
            "description": "Controls access to the server ECS task",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0976e555fb0653526",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0239f91abe05e3a6d"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "ecs-task-developmet-server",
            "name_prefix": "",
            "owner_id": "141084936975",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-task-developmet-server"
            },
            "tags_all": {
              "Name": "ecs-task-developmet-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1d8a1af161a22fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.security_group_alb_server.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_client_blue",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-developmet-c-b/85d41ddcdb978ec6",
            "arn_suffix": "targetgroup/tg-developmet-c-b/85d41ddcdb978ec6",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-developmet-c-b/85d41ddcdb978ec6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-developmet-c-b",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f1d8a1af161a22fd"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_client_green",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-developmet-c-g/2711e03e8bd3b01e",
            "arn_suffix": "targetgroup/tg-developmet-c-g/2711e03e8bd3b01e",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-developmet-c-g/2711e03e8bd3b01e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-developmet-c-g",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f1d8a1af161a22fd"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_server_blue",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-developmet-s-b/cb3ed1fff89b5af9",
            "arn_suffix": "targetgroup/tg-developmet-s-b/cb3ed1fff89b5af9",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "8000",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-developmet-s-b/cb3ed1fff89b5af9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-developmet-s-b",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f1d8a1af161a22fd"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_server_green",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-developmet-s-g/34fcdcc154aec406",
            "arn_suffix": "targetgroup/tg-developmet-s-g/34fcdcc154aec406",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "8000",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:141084936975:targetgroup/tg-developmet-s-g/34fcdcc154aec406",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-developmet-s-g",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f1d8a1af161a22fd"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}